k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: postgres
    template:
        metadata:
            labels:
                component: postgres
        spec:
            volumes: # volume to which this Pod will be attached defined in database-persistent-volume-claim config file
                - name: postgres-storage
                  persistentVolumeClaim:
                    claimName: database-persistent-volume-claim
            containers:
                - name: postgres
                  image: postgres
                  ports:
                    - containerPort: 5432
                  volumeMounts:
                    - name: postgres-storage  # Check in volumes the volume asked from Kubernetes
                      mountPath: /var/lib/postgresql/data #the path where data has to be stored in container, eventually it will use persistent volume
                      subPath: postgres # this is the folder in persistent volume claim where data will be stored - specific for postgres
