k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: worker
    template:
        metadata:
            labels:
                component: worker
        spec:
            containers:
                - name: worker
                  image: rohitkalra/multi-worker
                  env: # environemnt variables that should be passed into the container
                    - name: REDIS_HOST
                      value: redis-cluster-ip-service # value of name coming from redis-cluster-ip-service config file
                    - name: REDIS_PORT
                      value: '6379' # value coming from targetPort in redis-cluster-ip-service config file
