k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    selector: #used to identify which pods to provide access, in the client-deployment file it uses labels to get the name
    #the name of the component should be same with label name in client deployment file
        component: web
    ports:
        - port: 3000 # can be different from targetPort  # container port to access the pod
          targetPort: 3000 # cluster IP port to provide access to other objects
