k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: server-cluster-ip-service
spec:
    type: ClusterIP
    selector: #used to identify which pods to provide access, in the client-deployment file it uses labels to get the name
    #the name of the component should be same with label name in client deployment file
        component: server
    ports:
        - port: 5000 # container port to access the pod
          targetPort: 5000 # cluster IP port to provide access to other objects
