k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations: # additional configurations for Ingress object which gets created
        kubernetes.io/ingress.class: nginx # create ingress controller based on nginx project
        nginx.ingress.kubernetes.io/rewrite-target: /$1 # how the actual copy of nginx behaves remove some /api/ path to direct to /
spec:
    rules:
        - http:
            paths: # Possible paths for the traffic
                - path: /?(.*)
                  backend:
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /api/?(.*)
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
